pyquest/ql/test/semantic_analysis/invalid/test024.ql
// Incompatible result type for less equals operation
form testForm {
	"First Question"
	someIdentifier : integer = 10.0 <= 10
}